<resources>
    <string name="app_name">InTouch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Meeting_Code">Meeting Code</string>
    <string name="Meeting_Explorer">Meeting Explorer</string>
    <string name="Create_Meeting">Create Meeting</string>
    <string name="ej_name_1234">ej:name#1234</string>
    <string name="OR">--OR--</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="join">join</string>
    <string name="gmail">Gmail</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>

</resources>